Обновление проекта для поддержки работы с новыми тегами

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   db:
     image: mysql:5.7
+    container_name: diafan_db
     environment:
       MYSQL_ROOT_PASSWORD: my_secret_pw_shh
       MYSQL_DATABASE: test_db
@@ -12,10 +13,13 @@ services:
       - ./data/mysql:/var/lib/mysql
     ports:
       - "9906:3306"
+
   web:
     image: diafan_web:last
-    build: ./
-    container_name: php_web
+    build:
+      context: .
+      target: php
+    container_name: php
     depends_on:
       - db
     volumes:
